css/menu-style.css
/* MONTSERRAT REGULAR-MEDIUM-BOLD, ARIMO REGULAR-BOLD, ANTON REGULAR, Vujahday Script, freedoka one*/
@import url('https://fonts.googleapis.com/css2?family=Anton&family=Arimo:wght@400;700&family=Fredoka+One&family=Montserrat:wght@400;500;700&family=Vujahday+Script&display=swap');

* {
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}

:root {
    --amarillo: #F2CB05;
    --negro: #1D1D1D;
}

body {
    min-width: 100%;
    max-width: 100%;
    min-height: 100vh;
    max-height: 100vh;
    color: white;
    font-family: 'Arimo', sans-serif;
}

a {
    text-decoration: none;
}

h4 {
    text-align: center;
    text-transform: uppercase;
}

/* NAV */
#menu-icon {
    display: none;
}

nav {
    min-width: 100%;
    max-width: 100%;
    display: flex;
    justify-content: center;
    background-color: var(--negro);
}

#navbar {
    position: fixed;
    z-index: 9999;
    background-color: var(--negro);
    min-width: 100vw;
    max-width: 100vw;
    text-transform: uppercase;
}

#navbar>.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-width: 80vw;
    max-width: 80vw;
    min-height: 10vh;
    max-height: 10vh;
    padding: 0px;
}

nav ul {
    display: flex;
    margin: 0px;
}

nav ul li {
    list-style: none;
    text-decoration: none;
    padding: 0px 40px;
    font-weight: bold;
}

nav ul li:last-child {
    padding-right: 0px;
}

#menu-content a {
    color: white;
}

#menu-content a:hover {
    color: var(--amarillo);
}

#brand-img {
    min-width: 150px;
    max-width: 150px;
}

/* MENU */
.menu-title {
    color: var(--negro);
    padding: 3% 0px;
    margin-top: 10vh;
}

.menu-title h3 {
    text-transform: uppercase;
    font-size: 2.5rem;
    padding: 2% 0px 1% 0px;
    font-weight: 700;
}

.menu-title p {
    margin: 0px auto;
    width: 60%;
    font-size: 1rem;
    padding: 1% 0px 2% 0px;
    font-weight: 400;
}

#menu-items {
    background-color: var(--negro);
}

#menu-card {
    padding: 10% 0px;
}

.menu-card-img {
    margin: 0px auto;
    width: 300px;
    height: 300px;
}

.menu-card-img img {
    object-fit: cover;
    width: 300px;
    height: 300px;
    border-radius: 50%;
    border: 5px solid var(--amarillo);
}

#menu-card-text {
    text-align: center;
    padding: 5% 0px;

}

#menu-card-text h4 {
    color: var(--amarillo);
    font-weight: 700;
}

#menu-card-text p {
    font-weight: 400;
}


/* FOOTER */
footer {
    position: relative;
    min-width: 100vw;
    max-width: 100vw;
    background-color: var(--amarillo);
}

.social-media {
    display: flex;
    justify-content: center;
}

.social-media .row:first-child {
    min-width: 80%;
    max-width: 80%;
    min-height: 20vh;
    max-height: 20vh;
}

#brand-footer {
    height: 50px;
    margin: 0px auto;
}

footer li {
    display: flex;
    text-transform: uppercase;
    font-weight: bold;
    list-style: none;
    padding-bottom: 5px;
}

footer li a:link,
footer li a:visited,
footer li a:hover {
    color: var(--negro);
    text-decoration: none;
    padding-left: 6px;
}

footer li ion-icon {
    font-size: 20px;
    cursor: pointer;
    color: var(--negro);
}

footer .col-3:first-child {
    display: flex;
    align-items: center;
}

footer .col-3:last-child {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
}

footer .col-3:last-child ion-icon {
    display: flex;
    font-size: 30px;
    padding-bottom: 2%;
    cursor: pointer;
    color: var(--negro);
}

.copy-right {
    min-width: 100vw;
    max-width: 100vw;
    color: white;
    background-color: var(--negro);
}

.copy-right .row {
    min-width: 100vw;
    max-width: 100vw;
    min-height: 5vh;
    display: flex;
    align-items: center;
}

.copy-right span {
    text-align: center;
    margin: 0px;
    font-size: 16px;
}

/* UTILS */
.medium-line-dark {
    height: 2px;
    width: 150px;
    background-color: var(--negro);
    margin: 0px 10px;
}

.medium-line-white {
    height: 2px;
    width: 150px;
    background-color: white;
    margin: 0px 10px;
}


/* QUERYS */
/* @media (max-width:1024px) {
    .menu-card {
        display: flex;
        justify-content: center;
    }

    .menu-card-img {
        width: 200px;
        height: 200px;
    }

    .menu-card-img img {
        margin: 0px auto;
        width: 200px;
        height: 200px;
    }
} */

@media (min-width:792px) and (max-width:1365px) {

    /* NAV */
    #menu-content {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 0px;
    }

    #navbar ul li {
        display: inline-flex;
        list-style: none;
        font-weight: bold;
        padding: 0px 25px;
    }

    #navbar ul li:last-child {
        padding-right: 0px;
    }

    #navbar ul li a {
        text-decoration: none;
        color: white;
    }

    #menu-icon {
        display: none;
    }

    footer ul,
    .col-3 {
        padding: 0px;
        margin: 0px;
    }

    .copy-right span {
        font-size: 14px;
    }

    /* MENU-CARDS */
    .menu-card {
        display: flex;
        justify-content: center;
    }

    .menu-card-img {
        width: 200px;
        height: 200px;
    }

    .menu-card-img img {
        margin: 0px auto;
        width: 200px;
        height: 200px;
    }
}


/* MEDIUM (*MD*) RESOLUTION */
@media (min-width:420px) and (max-width:791px) {

    /* NAV */
    #menu-icon {
        display: flex;
        font-size: 34px;
    }

    #menu-content {
        min-width: 100vw;
    }

    #navbar ul {
        display: none;
        flex-direction: row;
        justify-content: space-evenly;
        align-items: center;
        text-align: center;
        left: 0px;
        top: 10vh;
        position: absolute;
        background-color: var(--negro);
        min-height: 10vh;
        max-height: 10vh;
    }

    #navbar ul li {
        list-style: none;
        padding: 0px;
    }

    #navbar ul li a {
        text-decoration: none;
    }

    /* MENU-CARDS */
    #menu-items{
        padding-top: 10vh;
    }
    .menu-card {
        padding: 5% 0px;
        display: flex;
        justify-content: center;
    }

    .menu-card-img {
        width: 200px;
        height: 200px;
    }

    .menu-card-img img {
        margin: 0px auto;
        width: 200px;
        height: 200px;
    }

    /* FOOTER MD RESOLUTION */
    footer ul {
        margin: 0px;
        padding: 0px;
        /* font-size: 10px; */
    }

    footer ul li ion-icon {
        font-size: 18px;
    }

    #brand-footer {
        height: 20%;
    }

    footer ul li a {
        font-size: 12px;
    }

    footer .col-3:last-child {
        display: flex;
    }

    footer .col-3:last-child ion-icon {
        font-size: 26px;
    }

    .copy-right span {
        text-align: center;
        font-size: 10px;
    }
}

